fixed some errors

--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/EditPacker.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/EditPacker.cshtml
@@ -85,7 +85,7 @@
         </tbody>
     </table>
     
-    if (Model.editableOrDeletable)
+    if (Model.EditableOrDeletable)
     {
         @Html.ActionLink("Delete", "#", new { questionId = Model.Id }, new { id = "delete" });
     }
