--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/IndexPacker.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/IndexPacker.cshtml
@@ -51,7 +51,7 @@
                         </td>
 
 
-                        @if (question.editableOrDeletable)
+                        @if (question.EditableOrDeletable)
                         {
                             <td>
                                 @Html.ActionLink("Edit", "EditPilot", new { questionId = question.Id })
