--- a/APFTestingUI/Views/CompletedExam/ViewPackerExamResults.cshtml
+++ b/APFTestingUI/Views/CompletedExam/ViewPackerExamResults.cshtml
@@ -1,13 +1,13 @@
 ﻿@model APFTestingUI.Models.CompletedExam.ExamDetailsPacker
 
 @{
-    ViewBag.Title = "ViewPackerExamResults";
+    ViewBag.Title = "Packer Exam Summary";
 }
 
-<h2>ViewPackerExamResults</h2>
+<h2>Packer Exam Summary</h2>
 
 <fieldset>
-    <legend>ExamDetailsPacker</legend>
+    <legend>Packer Details</legend>
     @Html.HiddenFor(m => m.ExamId)
     <div class="display-label">
          @Html.DisplayNameFor(model => model.APFNumber)
