Added validation to APF number and mobile number for user creation and editing. Only in the UI

--- a/APFTestingUI/Views/Candidate/CreatePacker.cshtml
+++ b/APFTestingUI/Views/Candidate/CreatePacker.cshtml
@@ -38,6 +38,7 @@
             @Html.EditorFor(model => model.Mobile)
             @*@Html.ValidationMessageFor(model => model.Mobile)*@
         </div>
+        &nbsp;&nbsp;&nbsp;(e.g. 0400123123)
         <div class="clear"></div>
 
         <div class="editor-label">
