--- a/APFTestingUI/Areas/Administration/Views/Examiner/Edit.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/Examiner/Edit.cshtml
@@ -56,6 +56,14 @@
         <div class="clear"></div>
 
         <div class="editor-label">
+            @Html.LabelFor(model => model.ConfirmPassword)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.ConfirmPassword)
+        </div>
+        <div class="clear"></div>
+
+        <div class="editor-label">
             @Html.LabelFor(model => model.ExaminerPilot)
         </div>
         <div class="editor-field">
@@ -73,7 +81,6 @@
 
         <p class="button-container">
             <span class="control-button-span">
-                <input type="reset" value="Reset" class="form-button" />
                 <input type="submit" value="Edit" class="form-button" />
             </span>
         </p>
