--- a/APFTestingUI/Views/Shared/_Layout.cshtml
+++ b/APFTestingUI/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
         <div class="gradient-wrapper">
             <div id="content">
                 <div class="size-wrapper">
+
                     @RenderBody()
                     <div class="hidden">
                         <div id="error-message"></div>
@@ -37,7 +38,7 @@
             </div>
             <footer id="footer">
                 <div class="size-wrapper">
-                    <p id="copy">&copy; 2013 Australian Parachute Federation</p>
+                    <p id="copy">&copy; @(DateTime.Now.Year) Australian Parachute Federation</p>
                     <div class="clear"></div>
                 </div>
             </footer>
