--- a/APFTestingUI/Views/Candidate/EditPacker.cshtml
+++ b/APFTestingUI/Views/Candidate/EditPacker.cshtml
@@ -18,7 +18,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.FirstName)
-            @*@Html.ValidationMessageFor(model => model.FirstName)*@
+            @Html.ValidationMessageFor(model => model.FirstName)
         </div>
         <div class="clear"></div>
 
@@ -27,7 +27,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.LastName)
-            @*@Html.ValidationMessageFor(model => model.LastName)*@
+            @Html.ValidationMessageFor(model => model.LastName)
         </div>
         <div class="clear"></div>
 
@@ -36,7 +36,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Mobile)
-            @*@Html.ValidationMessageFor(model => model.Mobile)*@
+            @Html.ValidationMessageFor(model => model.Mobile)
         </div>
         <div class="clear"></div>
 
@@ -45,7 +45,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.APFNumber)
-            @*@Html.ValidationMessageFor(model => model.APFNumber)*@
+            @Html.ValidationMessageFor(model => model.APFNumber)
         </div>
         <div class="clear"></div>
 
