--- a/APFTestingUI/Views/Candidate/CreatePacker.cshtml
+++ b/APFTestingUI/Views/Candidate/CreatePacker.cshtml
@@ -18,7 +18,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.FirstName)
-            @*@Html.ValidationMessageFor(model => model.FirstName)*@
+            @Html.ValidationMessageFor(model => model.FirstName)
         </div>
         <div class="clear"></div>
 
@@ -27,7 +27,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.LastName)
-            @*@Html.ValidationMessageFor(model => model.LastName)*@
+            @Html.ValidationMessageFor(model => model.LastName)
         </div>
         <div class="clear"></div>
 
@@ -36,17 +36,16 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Mobile)
-            @*@Html.ValidationMessageFor(model => model.Mobile)*@
+            @Html.ValidationMessageFor(model => model.Mobile)
         </div>
-        &nbsp;&nbsp;&nbsp;(e.g. 0400123123)
         <div class="clear"></div>
-
+        
         <div class="editor-label">
             @Html.LabelFor(model => model.APFNumber) <em>*</em>
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.APFNumber)
-            @*@Html.ValidationMessageFor(model => model.APFNumber)*@
+            @Html.ValidationMessageFor(model => model.APFNumber)
         </div>
         <div class="clear"></div>
 
