--- a/APFTestingUI/Views/Candidate/EditPilot.cshtml
+++ b/APFTestingUI/Views/Candidate/EditPilot.cshtml
@@ -23,7 +23,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.FirstName)
-            @*@Html.ValidationMessageFor(model => model.FirstName)*@
+            @Html.ValidationMessageFor(model => model.FirstName)
         </div>
         <div class="clear"></div>
 
@@ -32,7 +32,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.LastName)
-            @*@Html.ValidationMessageFor(model => model.LastName)*@
+            @Html.ValidationMessageFor(model => model.LastName)
         </div>
         <div class="clear"></div>
 
@@ -41,7 +41,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.DateOfBirth, new { @class = "datepicker" })
-            @*@Html.ValidationMessageFor(model => model.DateOfBirth)*@
+            @Html.ValidationMessageFor(model => model.DateOfBirth)
             <br />
             <small>Format: (dd/mm/yyyy)</small>
         </div>
@@ -52,7 +52,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Address1)
-            @*@Html.ValidationMessageFor(model => model.Address1)*@
+            @Html.ValidationMessageFor(model => model.Address1)
         </div>
         <div class="clear"></div>
 
@@ -61,7 +61,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Address2)
-            @*@Html.ValidationMessageFor(model => model.Address2)*@
+            @Html.ValidationMessageFor(model => model.Address2)
         </div>
         <div class="clear"></div>
 
@@ -70,7 +70,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Suburb)
-            @*@Html.ValidationMessageFor(model => model.Suburb)*@
+            @Html.ValidationMessageFor(model => model.Suburb)
         </div>
         <div class="clear"></div>
         
@@ -79,7 +79,7 @@
         </div>
         <div class="editor-field">
             @Html.DropDownListFor(model => model.State, Model.States, "--Select--")
-            @*@Html.ValidationMessageFor(model => model.State)*@
+            @Html.ValidationMessageFor(model => model.State)
         </div>
         <div class="clear"></div>
 
@@ -88,7 +88,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Postcode)
-            @*@Html.ValidationMessageFor(model => model.Postcode)*@
+            @Html.ValidationMessageFor(model => model.Postcode)
         </div>
         <div class="clear"></div>
 
@@ -97,7 +97,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.ARN)
-            @*@Html.ValidationMessageFor(model => model.ARN)*@
+            @Html.ValidationMessageFor(model => model.ARN)
         </div>
         <div class="clear"></div>
 
@@ -106,7 +106,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Phone)
-            @*@Html.ValidationMessageFor(model => model.Phone)*@
+            @Html.ValidationMessageFor(model => model.Phone)
         </div>
         <div class="clear"></div>
 
@@ -115,7 +115,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Mobile)
-            @*@Html.ValidationMessageFor(model => model.Mobile)*@
+            @Html.ValidationMessageFor(model => model.Mobile)
         </div>
         <div class="clear"></div>
 
@@ -124,7 +124,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Email)
-            @*@Html.ValidationMessageFor(model => model.Email)*@
+            @Html.ValidationMessageFor(model => model.Email)
         </div>
         <div class="clear"></div>
 
@@ -133,7 +133,7 @@
         </div>
         <div class="editor-field">
             @Html.DropDownListFor(model => model.PilotLicenceType, Model.PilotLicences, "--Select--")
-            @*@Html.ValidationMessageFor(model => model.PilotLicenceType)*@
+            @Html.ValidationMessageFor(model => model.PilotLicenceType)
         </div>
         <div class="clear"></div>
 
@@ -143,7 +143,7 @@
         <div class="editor-field">
             @Html.RadioButtonFor(model => model.InstrumentRating, true, new { id = "instrument-rating-true" }) <label for="instrument-rating-true">Yes</label><br />
             @Html.RadioButtonFor(model => model.InstrumentRating, false, new { id = "instrument-rating-false" }) <label for="instrument-rating-false">No</label>
-            @*@Html.ValidationMessageFor(model => model.InstrumentRating)*@
+            @Html.ValidationMessageFor(model => model.InstrumentRating)
         </div>
         <div class="clear"></div>
 
@@ -153,7 +153,7 @@
         <div class="editor-field">
             @Html.RadioButtonFor(model => model.PilotMedical, "ClassOne", new { id = "pilot-medical-class-1" }) <label for="pilot-medical-class-1">Class One</label><br />
             @Html.RadioButtonFor(model => model.PilotMedical, "ClassTwo", new { id = "pilot-medical-class-2" }) <label for="pilot-medical-class-2">Class Two</label>
-            @*@Html.ValidationMessageFor(model => model.PilotMedical)*@
+            @Html.ValidationMessageFor(model => model.PilotMedical)
         </div>
         <div class="clear"></div>
 
@@ -162,7 +162,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.PilotMedicalExpiry)
-            @*@Html.ValidationMessageFor(model => model.PilotMedicalExpiry)*@
+            @Html.ValidationMessageFor(model => model.PilotMedicalExpiry)
             <br />
             <small>Format: (dd/mm/yyyy)</small>
         </div>
@@ -173,7 +173,7 @@
         </div>
         <div class="editor-field">
             @Html.CheckBoxFor(model => model.ValidBFR)
-            @*@Html.ValidationMessageFor(model => model.ValidBFR)*@
+            @Html.ValidationMessageFor(model => model.ValidBFR)
         </div>
         <div class="clear"></div>
 
