did some styling

--- a/APFTestingUI/Views/Practical/PackerView.cshtml
+++ b/APFTestingUI/Views/Practical/PackerView.cshtml
@@ -6,6 +6,10 @@
 
 <h1>Demonstrated Packs</h1>
 
+<p>Remaining Tasks to Complete: 
+    @Model.TasksRemaining
+</p>
+
 <table id="tbl-demonstrated-packs">
     <thead>
         <tr>
