changed buttons at bottom of finalise exam page. Changed error.png to be relative to root on ServerError page

--- a/APFTestingUI/Views/CompletedExam/ViewPackerExamResults.cshtml
+++ b/APFTestingUI/Views/CompletedExam/ViewPackerExamResults.cshtml
@@ -81,7 +81,7 @@
     <div class="clear"></div>
 
 </fieldset>
-<p>
-    @Html.ActionLink("Submit", "SubmitPackerExamResults", new {  examId = Model.ExamId }) |
-    @Html.ActionLink("Back to List", "Index", "Examiner")
+<p class="button-container">
+    @Html.ActionLink("Cancel", "Index", "Examiner", new {}, new { @class="examiner-button"})
+    @Html.ActionLink("Submit", "SubmitPackerExamResults", new {  examId = Model.ExamId }, new { @class="examiner-button"})
 </p>
