--- a/APFTestingUI/Views/Error/ServerError.cshtml
+++ b/APFTestingUI/Views/Error/ServerError.cshtml
@@ -42,7 +42,7 @@
     <h2>
         Sorry, an error occurred while processing your request.
     </h2>
-    <div id="error-img-wrapper"><img src="../Images/error.png" alt="Error" id="img-error" /></div>
+    <div id="error-img-wrapper"><img src="~/Images/error.png" alt="Error" id="img-error" /></div>
     <div id="error-msg">@ViewBag.ExceptionMessage</div>
     <div class="clear"></div>
 </div>
