Went through TODO list and removed things that were done. Added some new fixes.

--- a/APFTestingUI/Views/Account/Login.cshtml
+++ b/APFTestingUI/Views/Account/Login.cshtml
@@ -47,4 +47,18 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script>
+        $(function(){
+            jQuery.browser = {};
+            (function () {
+                    jQuery.browser.msie = false;
+                    jQuery.browser.version = 0; if (navigator.userAgent.match(/MSIE ([0-9]+)\./)) {
+                    jQuery.browser.msie = true; jQuery.browser.version = RegExp.$1;
+                }
+            })();
+            if ($.browser.version < 10 && $.browser.version > 0) {
+                $('#ieDetected').show();
+            }
+        });
+    </script>
 }
