--- a/APFTestingUI/Views/Shared/_Layout.cshtml
+++ b/APFTestingUI/Views/Shared/_Layout.cshtml
@@ -41,7 +41,8 @@
             </div>
             <footer id="footer">
                 <div class="size-wrapper">
-                    <p id="copy">&copy; @(DateTime.Now.Year) Australian Parachute Federation</p>
+                    <div id="help"><a href="~/Content/files/User-Manual.pdf" target="_blank">Download User Manual</a></div>
+                    <div id="copy">&copy; @(DateTime.Now.Year) Australian Parachute Federation</div>
                     <div class="clear"></div>
                 </div>
             </footer>
